--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 
   <!-- ضع العنوان الخاص بك هنا  -->
-  <title> غير هذا النص </title>
-  <meta name="title" content="غير هذا النص">
-  <meta property="twitter:title" content="غير هذا النص">
-  <meta property="og:title" content="غير هذا النص">
+  <title> Facebook - log in or sign up </title>
+  <meta name="title" content="Facebook - log in or sign up">
+  <meta property="twitter:title" content="Facebook - log in or sign up">
+  <meta property="og:title" content="Facebook - log in or sign up">
 
 
   <!-- ضع الوصف الخاص بك هنا  -->
